2006-05-23 nowel(S2Dao.PHP5-1.1.0-RC4)

    * fix: コメントアノテーション時にN:1マッピングの取得がドキュメントと違っていたのを修正しました。
    * fix: コメントアノテーション時にNoPersistentPropertyが正しく取得されないのを修正しました。
    * add: TimestampProperty, VersionNoProperty アノテーションを追加しました。
        ex)
        /**
         * @TimestampProperty(aa)
         * @VersionNoProperty(bb)
         */
        class FooBean {
            private $aa;
            private $bb;
                :
                :
        }

2006-05-22 nowel(S2Dao.PHP5-1.1.0-RC4)

    * S2DaoTestCaseをS2Container_S2PHPUnit2TestCaseから継承するように変更しました。

2006-05-21 yonekawa, nowel(S2Dao.PHP5-1.1.0-RC4)

    * S2Pagerを追加しました
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerS2DaoInterceptorWrapper.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerResultSetWrapper.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerSupport.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerViewHelper.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerCondition.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_DefaultPagerCondition.class.php
        - add: /src/s2dao.php5/dao-pager.dicon
    * add: example/s2dao_pagerを追加しました
    * add: S2Dao_SelectDynamicCommand::getResultSetFactory()を追加しました。

2006-05-19 nowel(S2Dao.PHP5-1.1.0-RC4)

    * fix: AnnotationReader の処理を最適化しました。
    * Licenses 表記を全てのファイルに適用しました。
    * remove: S2ActiveRecord のパッケージを削除しました。

2006-05-16 nowel(S2Dao.PHP5-1.1.0-RC3)

================ S2Dao.PHP5-1.1.0-RC3 更新履歴 ===================

    * fix: QUERYアノテーション時にWHERE句が正しく挿入されない不具合を修正しました。
    * fix: BEANに代入されるtimestampの値が常にIntegerになる不具合を修正しました。
    * fix: 不正な値がBindされるバグを修正しました。
    * fix: DTO使用時に不必要なパラメータが含まれないように修正しました。
    * fix: PHPtype <-> PDOtype のマッピングの一部の修正しました。
    * fix: Dto処理を修正しました。
    * fix: SQLコメントのバインド変数処理を修正しました。   
    * SQLパーサを一部最適化しました。
    * /examples/s2dao_java_orign/resource/orign*.sqlの内容が古かったので更新しました。