@@ -1,0 +1,36 @@
+<?php
+
+/**
+ * Test class for {className}.
+ * Generated by PHPUnit2_Util_Skeleton on {date} at {time}.
+ */
+class {className}Test extends PHPUnit2_Framework_TestCase {
+
+    /**
+     * Runs the test methods of this class.
+     *
+     * @access public
+     * @static
+     */
+    public static function main() {
+        $suite  = new PHPUnit2_Framework_TestSuite("{className}Test");
+        $result = PHPUnit2_TextUI_TestRunner::run($suite);
+    }
+
+    /**
+     * Sets up the fixture, for example, open a network connection.
+     * This method is called before a test is executed.
+     *
+     * @access protected
+     */
+    protected function setUp() {
+    }
+
+    /**
+     * Tears down the fixture, for example, close a network connection.
+     * This method is called after a test is executed.
+     *
+     * @access protected
+     */
+    protected function tearDown() {
+    }
